Fix favorite container widths, align container

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -64,7 +64,7 @@
     list-style-type: none;
     border: 1px solid #ced1d5;
     padding-left: 0;
-    margin-right: 1%;
+    margin-right: 1.31%;
     margin-top: 0;
     width: 31%;
     vertical-align: top;
